tests/invalid/invalid-007.inox
Module Invalid007

Main() :
    continue
;
